--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.11",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "crypto-js": "^3.1.9-1",
+    "@types/crypto-js": "3.1.43"
   }
 }
