--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "4.0.2",
     "gulp-typescript": "5.0.1",
     "gulp-concat": "2.6.1",
-    "through2": "3.0.1"
+    "through2": "3.0.1",
+    "build": "^0.1.4"
   }
 }
