--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp": "4.0.2",
     "gulp-typescript": "5.0.1",
     "gulp-concat": "2.6.1",
+    "gulp-uglify": "3.0.2",
+    "gulp-rename": "1.4.0",
     "through2": "3.0.1",
     "build": "^0.1.4"
   }
